[gd_scene load_steps=5 format=3 uid="uid://c752jax0du1jh"]

[ext_resource type="Script" uid="uid://df44rdrfabhvy" path="res://scenes/weapon_select.gd" id="1_trn4b"]
[ext_resource type="Script" uid="uid://kxhkget1003f" path="res://scenes/weapon_1.gd" id="2_kkspt"]
[ext_resource type="Script" uid="uid://br410gn3c4ja1" path="res://scenes/weapon_2.gd" id="3_1mgpk"]
[ext_resource type="Script" uid="uid://c0otph77q4ma4" path="res://scenes/weapon_3.gd" id="4_qsdhm"]

[node name="WeaponSelect" type="Control"]
layout_mode = 3
anchor_left = 0.271
anchor_top = 0.196
anchor_right = 0.602
anchor_bottom = 0.775
offset_left = -539.32
offset_top = -271.68
offset_right = 745.16
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trn4b")

[node name="Weapon1" type="Button" parent="."]
layout_mode = 0
offset_left = 772.0
offset_top = 358.0
offset_right = 1007.0
offset_bottom = 435.0
theme_override_font_sizes/font_size = 50
text = "Weapon1"
script = ExtResource("2_kkspt")

[node name="Weapon2" type="Button" parent="."]
offset_left = 760.0
offset_top = 511.0
offset_right = 995.0
offset_bottom = 588.0
theme_override_font_sizes/font_size = 50
text = "Weapon2"
script = ExtResource("3_1mgpk")

[node name="Weapon3" type="Button" parent="."]
offset_left = 782.0
offset_top = 692.0
offset_right = 1017.0
offset_bottom = 769.0
theme_override_font_sizes/font_size = 50
text = "Weapon3"
script = ExtResource("4_qsdhm")

[connection signal="pressed" from="Weapon1" to="." method="_on_weapon_1_pressed"]
[connection signal="pressed" from="Weapon2" to="." method="_on_weapon_2_pressed"]
[connection signal="pressed" from="Weapon3" to="." method="_on_weapon_3_pressed"]
